--- a/Homework/Vector3/Vector3/Vector3.vcxproj.filters
+++ b/Homework/Vector3/Vector3/Vector3.vcxproj.filters
@@ -21,7 +21,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Vector3.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
