--- a/Handouts/Dev_class2_handout/Motor2D/Motor2D.vcxproj
+++ b/Handouts/Dev_class2_handout/Motor2D/Motor2D.vcxproj
@@ -53,7 +53,7 @@
       <ShowIncludes>false</ShowIncludes>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
